tests/compile_fail/timeout/missing_duration.rs
use loose_timer::timeout;

#[timeout]
fn missing_duration() {}

fn main() {}
