tests/compile_fail/timeout/missing_duration.stderr
error: timeout duration is required
 --> tests/compile_fail/timeout/missing_duration.rs:3:1
  |
3 | #[timeout]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `timeout` (in Nightly builds, run with -Z macro-backtrace for more info)
